@@ -38,7 +38,7 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.3.5-cvs-b23";
+$gallery->version = "1.3.5-cvs-b24";
 $gallery->config_version = 36;
 $gallery->album_version = 10;
 $gallery->remote_protocol_version = 1;
